sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: not found: value lgr
  lgr = getNombreValeurs()
  ^AlgInsertionSort:4: error: not found: value lgr
  for (i<-0 to lgr-1){
               ^AlgInsertionSort:12: error: not found: value i
  i=n-1
  ^AlgInsertionSort:13: error: not found: value v
  v=getValeur(n)
  ^AlgInsertionSort:14: error: not found: value v
	while(plusPetitQue(v,getValeur(i-1)) ){
                           ^AlgInsertionSort:14: error: not found: value i
	while(plusPetitQue(v,getValeur(i-1)) ){
                                       ^AlgInsertionSort:15: error: not found: value i
    copie(i-1,i)
          ^AlgInsertionSort:15: error: not found: value i
    copie(i-1,i)
              ^AlgInsertionSort:16: error: not found: value i
    i=i-1
    ^